tests/compiler/errors/if_binding_shadow.casa
# expect: DUPLICATE_NAME

enum Maybe {
    Just (int)
    Nothing
}

fn shadow_outer m:Maybe {
    7 = value
    if m Maybe::Just(value) is then
        value drop
    fi
}
42 Maybe::Just shadow_outer
